# towa

./: .containerignore  .gitignore  Cargo.toml  Containerfile.towa.aarch64  README.md  config.example.toml
docs/: backend-api.md  first-run-checklist.md
docs/frontend/: stitch-rss-reference.md
migrations/: 0001_init.sql  0002_scheduler_metadata.sql  0003_llm_processing.sql  0004_processing_observability.sql  0005_article_favorites.sql  0006_article_read_state.sql  0007_llm_titles.sql  0008_article_visibility.sql  0009_article_content.sql
openspec/changes/archive/2026-04-03-add-article-favorites/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-add-article-favorites/specs/article-favorites/: spec.md
openspec/changes/archive/2026-04-04-backfill-core-platform-specs/: design.md  proposal.md  tasks.md
openspec/specs/article-favorites/: spec.md
openspec/specs/article-storage-retention/: spec.md
openspec/specs/feed-fetch-scheduling/: spec.md
openspec/specs/feed-source-management/: spec.md
openspec/specs/llm-agent-post-processing/: spec.md
openspec/specs/reader-api-and-web-ui/: spec.md
scripts/: build-towa-arm64.sh  dev.sh
src/: app.rs  config.rs  db.rs  domain.rs  llm.rs  main.rs  scheduler.rs  state.rs
web/: index.html  package-lock.json  vite.config.ts
web/src/: App.vue  style.css
web/src/lib/: api.ts  dashboardFilters.ts  markdown.ts  types.ts
web/src/router/: index.ts
web/src/views/: DashboardView.vue  SettingsView.vue
(+5 files in other folders)
