[package]
name = "towa"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
feed-rs = "2.3.1"
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "json", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.0"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["serde", "v4", "v5"] }

[dev-dependencies]
tempfile = "3.27.0"
